--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -26,7 +26,7 @@
         <version>0.2</version>
     </parent>
     <artifactId>client-sdk</artifactId>
-    <version>0.2.1</version>
+    <version>0.3-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
