Increased version of the api.

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </developers>
 
     <properties>
-        <jeon.version>0.3</jeon.version>
+        <jeon.version>0.4-SNAPSHOT</jeon.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
