--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -23,40 +23,26 @@
     <parent>
         <groupId>io.github.ma1uta</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.2</version>
+        <version>0.3</version>
     </parent>
     <artifactId>client-sdk</artifactId>
     <version>0.3-SNAPSHOT</version>
 
+    <properties>
+        <client.api.version>0.4</client.api.version>
+        <common.backend.version>0.2</common.backend.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta</groupId>
-            <artifactId>common-api</artifactId>
-            <version>${jeon.version}</version>
+            <artifactId>client-api</artifactId>
+            <version>${client.api.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.ma1uta</groupId>
-            <artifactId>client-api</artifactId>
-            <version>${jeon.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>${hibernate.jpa.api.version}</version>
+            <artifactId>common-backend</artifactId>
+            <version>${common.backend.version}</version>
         </dependency>
     </dependencies>
 </project>
