--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.2</version>
+    <version>0.3</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -44,8 +44,6 @@
     </developers>
 
     <properties>
-        <jeon.version>0.4-SNAPSHOT</jeon.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -189,6 +187,7 @@
         <module>common-backend</module>
         <module>homeserver-backend</module>
         <module>client-sdk</module>
+        <module>bot-sdk</module>
         <module>identity-backend</module>
     </modules>
 </project>
