--- a/common-backend/pom.xml
+++ b/common-backend/pom.xml
@@ -28,7 +28,7 @@
     <version>0.2</version>
 
     <properties>
-        <common.api.version>0.4</common.api.version>
+        <common.api.version>0.4.1-SNAPSHOT</common.api.version>
     </properties>
 
     <dependencies>
