--- a/common-backend/pom.xml
+++ b/common-backend/pom.xml
@@ -22,10 +22,10 @@
     <parent>
         <groupId>io.github.ma1uta</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.3</version>
+        <version>0.4-SNAPSHOT</version>
     </parent>
     <artifactId>common-backend</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
 
     <properties>
         <common.api.version>0.4.1-SNAPSHOT</common.api.version>
