--- a/bot-sdk/pom.xml
+++ b/bot-sdk/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.github.ma1uta</groupId>
+        <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
         <version>0.4-SNAPSHOT</version>
     </parent>
@@ -34,7 +34,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
+            <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-sdk</artifactId>
             <version>${client.sdk.version}</version>
         </dependency>
