--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.github.ma1uta</groupId>
+        <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
         <version>0.4-SNAPSHOT</version>
     </parent>
@@ -30,19 +30,19 @@
 
     <properties>
         <client.api.version>0.4.1-SNAPSHOT</client.api.version>
-        <common.backend.version>0.3-SNAPSHOT</common.backend.version>
+        <common.sdk.version>0.3-SNAPSHOT</common.sdk.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
+            <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-api</artifactId>
             <version>${client.api.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
-            <artifactId>common-backend</artifactId>
-            <version>${common.backend.version}</version>
+            <groupId>io.github.ma1uta.matrix</groupId>
+            <artifactId>common-sdk</artifactId>
+            <version>${common.sdk.version}</version>
         </dependency>
     </dependencies>
 </project>
