--- a/identity-sdk/pom.xml
+++ b/identity-sdk/pom.xml
@@ -20,11 +20,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.ma1uta</groupId>
+        <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
         <version>0.4-SNAPSHOT</version>
     </parent>
-    <artifactId>identity-backend</artifactId>
+    <artifactId>identity-sdk</artifactId>
     <version>0.3-SNAPSHOT</version>
 
     <properties>
@@ -33,24 +33,24 @@
         <bcpkix.jdk15on.version>1.59</bcpkix.jdk15on.version>
         <bcprov.ext.jdk15on.version>1.59</bcprov.ext.jdk15on.version>
         <eddsa.version>0.2.0</eddsa.version>
-        <common.backend.version>0.3-SNAPSHOT</common.backend.version>
+        <common.sdk.version>0.3-SNAPSHOT</common.sdk.version>
         <identity.api.version>0.4.1-SNAPSHOT</identity.api.version>
         <server.api.version>0.4.1-SNAPSHOT</server.api.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
-            <artifactId>common-backend</artifactId>
-            <version>${common.backend.version}</version>
+            <groupId>io.github.ma1uta.matrix</groupId>
+            <artifactId>common-sdk</artifactId>
+            <version>${common.sdk.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
+            <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>identity-api</artifactId>
             <version>${identity.api.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.ma1uta</groupId>
+            <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>server-api</artifactId>
             <version>${server.api.version}</version>
         </dependency>
