--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
     </parent>
     <artifactId>client-sdk</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
 
     <properties>
-        <client.api.version>0.4.1-SNAPSHOT</client.api.version>
-        <common.sdk.version>0.3-SNAPSHOT</common.sdk.version>
+        <client.api.version>0.4.1</client.api.version>
+        <common.sdk.version>0.3</common.sdk.version>
     </properties>
 
     <dependencies>
