--- a/identity-sdk/pom.xml
+++ b/identity-sdk/pom.xml
@@ -22,10 +22,10 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
     </parent>
     <artifactId>identity-sdk</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
 
     <properties>
         <commons.lang3.version>3.7</commons.lang3.version>
@@ -33,9 +33,9 @@
         <bcpkix.jdk15on.version>1.59</bcpkix.jdk15on.version>
         <bcprov.ext.jdk15on.version>1.59</bcprov.ext.jdk15on.version>
         <eddsa.version>0.2.0</eddsa.version>
-        <common.sdk.version>0.3-SNAPSHOT</common.sdk.version>
-        <identity.api.version>0.4.1-SNAPSHOT</identity.api.version>
-        <server.api.version>0.4.1-SNAPSHOT</server.api.version>
+        <common.sdk.version>0.3</common.sdk.version>
+        <identity.api.version>0.4.1</identity.api.version>
+        <server.api.version>0.4.1</server.api.version>
     </properties>
 
     <dependencies>
