--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -26,11 +26,11 @@
         <version>0.4</version>
     </parent>
     <artifactId>client-sdk</artifactId>
-    <version>0.3.1</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <client.api.version>0.4.1</client.api.version>
-        <common.sdk.version>0.3</common.sdk.version>
+        <client.api.version>r0.4.0-1-SNAPSHOT</client.api.version>
+        <common.sdk.version>0.4.0-SNAPSHOT</common.sdk.version>
     </properties>
 
     <dependencies>
