--- a/common-sdk/pom.xml
+++ b/common-sdk/pom.xml
@@ -25,10 +25,10 @@
         <version>0.4</version>
     </parent>
     <artifactId>common-sdk</artifactId>
-    <version>0.3</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.4.1</common.api.version>
+        <common.api.version>0.5.0-SNAPSHOT</common.api.version>
     </properties>
 
     <dependencies>
