--- a/common-sdk/pom.xml
+++ b/common-sdk/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.4</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
     <artifactId>common-sdk</artifactId>
     <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.5.0-SNAPSHOT</common.api.version>
+        <common.api.version>0.5.0</common.api.version>
     </properties>
 
     <dependencies>
