--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.4</version>
+    <version>0.5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -66,21 +66,17 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <maven.checkstyle.plugin.version>3.0.0</maven.checkstyle.plugin.version>
-        <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
-        <nexus.staging.maven.plugin.version>1.6.7</nexus.staging.maven.plugin.version>
-        <checkstyle.version>8.8</checkstyle.version>
-        <jacoco.maven.plugin.version>0.8.1</jacoco.maven.plugin.version>
+        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
+        <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
+        <checkstyle.version>8.12</checkstyle.version>
+        <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
         <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
         <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
         <maven.project.info.plugin.version>3.0.0</maven.project.info.plugin.version>
-        <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
-        <nexus.staging.maven.plugin.version>1.6.7</nexus.staging.maven.plugin.version>
-
-
         <slf4j.api.version>1.7.25</slf4j.api.version>
         <javax.ws.rs.api.version>2.0.1</javax.ws.rs.api.version>
         <jackson.annotations.version>2.9.0</jackson.annotations.version>
@@ -317,31 +313,47 @@
             </modules>
         </profile>
         <profile>
-            <id>client</id>
+            <id>common-sdk</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <modules>
                 <module>common-sdk</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>client</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <modules>
                 <module>client-sdk</module>
             </modules>
         </profile>
         <profile>
             <id>bot</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <modules>
-                <module>common-sdk</module>
-                <module>client-sdk</module>
                 <module>bot-sdk</module>
             </modules>
         </profile>
         <profile>
             <id>id</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <modules>
-                <module>common-sdk</module>
                 <module>identity-sdk</module>
             </modules>
         </profile>
         <profile>
             <id>hs</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <modules>
-                <module>common-sdk</module>
                 <module>homeserver-sdk</module>
             </modules>
         </profile>
