--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.4</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
     <artifactId>client-sdk</artifactId>
     <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <client.api.version>r0.4.0-1-SNAPSHOT</client.api.version>
+        <client.api.version>r0.4.0-1</client.api.version>
         <common.sdk.version>0.4.0-SNAPSHOT</common.sdk.version>
     </properties>
 
