--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -306,10 +306,8 @@
             </activation>
             <modules>
                 <module>common-sdk</module>
-                <module>homeserver-sdk</module>
                 <module>client-sdk</module>
                 <module>bot-sdk</module>
-                <module>identity-sdk</module>
             </modules>
         </profile>
         <profile>
