--- a/bot-sdk/pom.xml
+++ b/bot-sdk/pom.xml
@@ -26,10 +26,10 @@
         <version>0.5.0</version>
     </parent>
     <artifactId>bot-sdk</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
 
     <properties>
-        <client.sdk.version>0.4.0-SNAPSHOT</client.sdk.version>
+        <client.sdk.version>0.4.0</client.sdk.version>
     </properties>
 
     <dependencies>
