--- a/client-sdk/pom.xml
+++ b/client-sdk/pom.xml
@@ -26,7 +26,7 @@
         <version>0.5.0</version>
     </parent>
     <artifactId>client-sdk</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <properties>
         <client.api.version>r0.4.0-1</client.api.version>
