--- a/common-sdk/pom.xml
+++ b/common-sdk/pom.xml
@@ -28,7 +28,7 @@
     <version>0.4.1-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.5.0</common.api.version>
+        <common.api.version>0.6.0-SNAPSHOT</common.api.version>
     </properties>
 
     <dependencies>
