--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,17 @@
         <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
         <maven.project.info.plugin.version>3.0.0</maven.project.info.plugin.version>
-        <slf4j.api.version>1.7.25</slf4j.api.version>
-        <javax.ws.rs.api.version>2.0.1</javax.ws.rs.api.version>
-        <jackson.annotations.version>2.9.6</jackson.annotations.version>
-        <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
-        <hibernate.jpa.api.version>1.0.0.Final</hibernate.jpa.api.version>
-        <junit5.bom.version>5.2.0</junit5.bom.version>
-        <jetty.server.version>9.4.11.v20180605</jetty.server.version>
-        <jersey.client.version>2.25.1</jersey.client.version>
-        <jersey.rx.client.version>2.25.1</jersey.rx.client.version>
-        <jersey.media.json.jackson.version>2.25.1</jersey.media.json.jackson.version>
-        <jackson.jaxrs.json.provider.version>2.9.6</jackson.jaxrs.json.provider.version>
-        <jackson.databind.version>2.9.6</jackson.databind.version>
+        <slf4j.api.version>1.8.0-beta2</slf4j.api.version>
+        <javax.ws.rs.api.version>2.1.1</javax.ws.rs.api.version>
+        <jackson.annotations.version>2.9.7</jackson.annotations.version>
+        <javax.servlet.api.version>4.0.1</javax.servlet.api.version>
+        <hibernate.jpa.api.version>1.0.2</hibernate.jpa.api.version>
+        <junit5.bom.version>5.3.1</junit5.bom.version>
+        <jetty.server.version>9.4.12.v20180830</jetty.server.version>
+        <jackson.jaxrs.json.provider.version>2.9.7</jackson.jaxrs.json.provider.version>
+        <jackson.databind.version>2.9.7</jackson.databind.version>
+        <resteasy.client.version>4.0.0.Beta5</resteasy.client.version>
+        <resteasy.undertow.version>4.0.0.Beta5</resteasy.undertow.version>
     </properties>
 
     <build>
@@ -268,21 +267,6 @@
                 <version>${javax.servlet.api.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.jersey.core</groupId>
-                <artifactId>jersey-client</artifactId>
-                <version>${jersey.client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.jersey.ext.rx</groupId>
-                <artifactId>jersey-rx-client</artifactId>
-                <version>${jersey.rx.client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.jersey.media</groupId>
-                <artifactId>jersey-media-json-jackson</artifactId>
-                <version>${jersey.media.json.jackson.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
                 <artifactId>jackson-jaxrs-json-provider</artifactId>
                 <version>${jackson.jaxrs.json.provider.version}</version>
@@ -294,6 +278,19 @@
             </dependency>
 
             <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-client</artifactId>
+                <version>${resteasy.client.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jackson2-provider</artifactId>
+                <version>${resteasy.client.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
                 <version>${junit5.bom.version}</version>
@@ -301,16 +298,9 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-server</artifactId>
-                <version>${jetty.server.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-servlet</artifactId>
-                <version>${jetty.server.version}</version>
-                <scope>test</scope>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-undertow</artifactId>
+                <version>${resteasy.undertow.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
