--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -24,8 +24,8 @@
         <artifactId>jmsdk</artifactId>
         <version>0.5.1-SNAPSHOT</version>
     </parent>
-    <artifactId>common-sdk</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <artifactId>jackson-support</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
 
     <properties>
         <common.api.version>0.6.0-SNAPSHOT</common.api.version>
@@ -36,22 +36,6 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
             <version>${common.api.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
