--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -24,11 +24,13 @@
         <artifactId>jmsdk</artifactId>
         <version>0.5.1-SNAPSHOT</version>
     </parent>
-    <artifactId>common-sdk</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <artifactId>jsonb-support</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
 
     <properties>
         <common.api.version>0.6.0-SNAPSHOT</common.api.version>
+        <dsl.json.java8.version>1.8.2</dsl.json.java8.version>
+        <javax.json.version>1.1.3</javax.json.version>
     </properties>
 
     <dependencies>
@@ -36,6 +38,26 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
             <version>${common.api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json.bind</groupId>
+            <artifactId>javax.json.bind-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>1.0.1</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
