--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,9 @@
         <jackson.databind.version>2.9.7</jackson.databind.version>
         <resteasy.client.version>4.0.0.Beta5</resteasy.client.version>
         <resteasy.undertow.version>4.0.0.Beta5</resteasy.undertow.version>
-    </properties>
+        <javax.json.bind.api.version>1.0</javax.json.bind.api.version>
+        <javax.json.api.version>1.1.3</javax.json.api.version>
+     </properties>
 
     <build>
         <pluginManagement>
@@ -302,7 +304,17 @@
                 <artifactId>resteasy-undertow</artifactId>
                 <version>${resteasy.undertow.version}</version>
             </dependency>
-        </dependencies>
+            <dependency>
+                <groupId>javax.json.bind</groupId>
+                <artifactId>javax.json.bind-api</artifactId>
+                <version>${javax.json.bind.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
+                <version>${javax.json.api.version}</version>
+            </dependency>
+         </dependencies>
     </dependencyManagement>
 
     <profiles>
@@ -395,6 +407,24 @@
             </activation>
             <modules>
                 <module>homeserver-sdk</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>jsonb-support</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>jsonb-support</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>jackson-support</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <modules>
+                <module>jackson-support</module>
             </modules>
         </profile>
     </profiles>
