--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -29,8 +29,8 @@
 
     <properties>
         <common.api.version>0.6.0-SNAPSHOT</common.api.version>
-        <dsl.json.java8.version>1.8.2</dsl.json.java8.version>
         <javax.json.version>1.1.3</javax.json.version>
+        <yasson.version>1.0.1</yasson.version>
     </properties>
 
     <dependencies>
@@ -51,12 +51,12 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
-            <version>1.1.2</version>
+            <version>${javax.json.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
-            <version>1.0.1</version>
+            <version>${yasson.version}</version>
             <scope>test</scope>
         </dependency>
 
