--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -37,5 +37,21 @@
             <artifactId>common-api</artifactId>
             <version>${common.api.version}</version>
         </dependency>
-    </dependencies>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+     </dependencies>
 </project>
