--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -30,9 +30,7 @@
 
     <properties>
         <client.api.version>r0.4.0-2</client.api.version>
-        <common.sdk.version>0.5.0-SNAPSHOT</common.sdk.version>
-        <jackson.support.version>0.1.0-SNAPSHOT</jackson.support.version>
-        <undertow.version>2.0.14.Final</undertow.version>
+        <common.impl.version>0.5.0-SNAPSHOT</common.impl.version>
     </properties>
 
     <dependencies>
@@ -44,61 +42,7 @@
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-impl</artifactId>
-            <version>${common.sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.ma1uta.matrix</groupId>
-            <artifactId>jackson-support</artifactId>
-            <version>${jackson.support.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-json-provider</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jackson2-provider</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-core</artifactId>
-            <version>${undertow.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-            <version>${undertow.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <scope>test</scope>
+            <version>${common.impl.version}</version>
         </dependency>
     </dependencies>
 </project>
